--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/RDELX/tmi_pg#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "pg": "^8.10.0",
     "tmi.js": "^1.8.5"
   }
